jumbo, SP_GENERIC_32, fullscreen, camera
Add CAMERA and FULLSCREEN defines.  DIsplay message on warning window when
fullscreen toggle key used.  Add SP_GENERIC_32 version 'b' support, with
galactic centre PAUSED message.  Fix a CPU loop hang during login when daemon
does not start and an X event arrives.  Move camera snap activation to Wlib.
Fix lack of error handling in readFromServer's main select call.

--- a/config.h.in
+++ b/config.h.in
@@ -164,8 +164,8 @@
 #define PHASER_STATS
 #define RECORDGAME
 
-
-
+#define CAMERA
+#define FULLSCREEN
 
 /*
 ##############################################################################
