--- a/system.mk.in
+++ b/system.mk.in
@@ -105,15 +105,20 @@ SDL_CONFIG 	= @SDL_CONFIG@
 SDL_LIBS 	= @SDL_LIBS@
 SDL_MIXER_LIBS	= @SDL_MIXER_LIBS@
 
+# full screen support
+XXF86VM_LIBS    = -lXxf86vm
+# camera snapshot support
+IMLIB2_LIBS     = -lImlib2
+
 SHARED 	= $(SL_CFLAGS)
 INCDIRS = $(MPINC) $(INCS)
 CFLAGS = $(OPT) $($S) $(EXTRACFLAGS) $(SDL_CFLAGS) $(RSA_FLAGS) $(INCDIRS)
 LFLAGS = -g $(EXTRALINKFLAGS)
-LIBRARIES = $(LMP) $(LIBS) $(EXTRALIBS) $(SDL_LIBS) $(SDL_MIXER_LIBS)
+LIBRARIES = $(LMP) $(LIBS) $(EXTRALIBS) $(SDL_LIBS) $(SDL_MIXER_LIBS) $(XXF86VM_LIBS) $(IMLIB2_LIBS)
 
 netrek: $(RSAOBJ) $(PMAKE) null $(ROBJ) $(MAINOBJ) $(INPUTOBJ) $(X11OBJ) $(WIN32OBJ)  $(RANDOMOBJ) cflags.c
 	$(CC) $(LFLAGS) -o netrek $(ROBJ) $(RSAOBJ) $(INPUTOBJ) \
-	$(MAINOBJ) $(X11OBJ) $(WIN32OBJ) $(RANDOMOBJ) $(LIBRARIES) -lXxf86vm -lImlib2
+	$(MAINOBJ) $(X11OBJ) $(WIN32OBJ) $(RANDOMOBJ) $(LIBRARIES)
 
 netrek.shared: done.libcow $(MAINOBJ) $(COWAPI)
 	$(CC) $(LFLAGS) $(MAINOBJ) -L. -lcow $(LIBS) -o netrek.shared
