system wide default file 7faa061983888bfb5a8d726aed2102b5509d9e62

--- a/config.h.in
+++ b/config.h.in
@@ -140,7 +140,7 @@
 #define  XTRA_MESSAGE_UI
 
 /* SYSTEM_DEFAULTFILE		- Points to a system wide .xtrekrc file */
-#define SYSTEM_DEFAULTFILE "/etc/netrekrc"
+#define SYSTEM_DEFAULTFILE "/etc/netrek-client-cow/netrekrc"
 
 /* WINDOWMAKER			- WindowMaker Docking support */
 #ifdef linux
