--- a/configure.in
+++ b/configure.in
@@ -10,19 +10,6 @@ AC_ARG_WITH(key, [  --with-key              key definition file],KEYDEF=$withval
 AC_SUBST(KEYDEF)
 
 AC_PROG_INSTALL
-#
-# autoconf assumes that we never cd to a subdirectory and then use the
-# install-sh that it has found in the current directory, so we hack around
-# this by testing for the particular case and modifying the variable directly.
-#
-# this may break with a future version of autoconf.  to test this on a Linux
-# system, hide your /usr/bin/install, remove config.cache, and re-run the
-# autoconf generated configure script.
-#							cameron@stl.dec.com
-#
-if test "$INSTALL" = "./install-sh -c"; then
-  INSTALL="$PWD/install-sh -c"
-fi
 
 AC_PROG_CC
 AC_PROG_CPP
@@ -45,7 +32,7 @@ AC_C_INLINE
 AC_MSG_CHECKING(if fd_set requires sys/select.h)
 AC_TRY_COMPILE( [#include <sys/types.h>], [fd_set readMask, writeMask;],
   AC_MSG_RESULT(no) ,
-  AC_EGREP_HEADER(fd_set, sys/select.h, 
+  AC_EGREP_HEADER(fd_set, sys/select.h,
       AC_DEFINE(NEED_SYS_SELECT_H) AC_MSG_RESULT(yes),
       AC_DEFINE(NO_FD_SET) AC_MSG_RESULT(fd_set missing)))
 
@@ -76,7 +63,7 @@ AC_EGREP_HEADER(u_int, sys/types.h, AC_MSG_RESULT(yes) , AC_DEFINE(NO_U_INT) AC_
 
 AC_MSG_CHECKING(for PATH_MAX in limits.h)
 AC_EGREP_CPP(PATH_MAX, [
-#include <limits.h> 
+#include <limits.h>
 PATH_MAX
 ], AC_DEFINE(NO_PATH_MAX) AC_MSG_RESULT(no), AC_MSG_RESULT(yes))
 
@@ -88,33 +75,9 @@ AC_CHECK_FUNCS(strcmpi strncmpi)
 
 AC_PATH_X
 
-# Checking for gnu-win32 Windows libraries
-
-AC_CHECK_LIB(gdi32, main, CYGWINOS="yes", CYGWINOS="")
-
-if test -z "$CYGWINOS"; then
-  AC_DEFINE(HAVE_X11)
-  NOWIN32="#"
-else
-
-# Fix some autodetect errors
-# AC_DEFINE(HAVE_STRCMPI)
-# AC_DEFINE(HAVE_STRNCMPI)
-# AC_DEFINE(SKIP_SOUND)
-
-if test -z "$no_x"; then
-  AC_DEFINE(HAVE_X11) 
-  AC_DEFINE(HAVE_X11_XPM_H)
-  NOWIN32="#"
-else
-  AC_DEFINE(HAVE_WIN32) 
-  XLIBSWDIR="-L/lib/noX"
-  XLIBSWLIB="-lwinmm -lgdi32 -luser32"
-  XINCLUDES="-I/usr/include/noX"
-  NOX11="#"
-fi
-
-fi
+AC_DEFINE(HAVE_X11)
+AC_DEFINE(HAVE_X11_XPM_H)
+NOWIN32="#"
 
 if test -z "$NOX11" ; then
 
@@ -196,8 +159,8 @@ LIBS="$LIBS $XLIBSW"
 AC_ARG_WITH(gmp,[  --with-gmp              GMP Dir], MPINC="-I$withval/include"  MPLIB="-L$withval/lib -lgmp" search=false, MPINC=nope MPLIB=nope)
 if test "$MPINC" = nope; then
     AC_MSG_CHECKING(for mp.h)
-    AC_EGREP_CPP(GNU_MP,[ 
-#include <mp.h> 
+    AC_EGREP_CPP(GNU_MP,[
+#include <mp.h>
 __GNU_MP__
 ],
         [gnu_mp_ok=yes],
@@ -214,9 +177,6 @@ __GNU_MP__
 fi
 
 AC_MSG_CHECKING(for gmp.h)
-#   if test "$MPINC" = nope; then
-#      AC_TRY_CPP([#include <gmp.h>], [MPINC="-I/usr/include" search=false], MPINC=nope)
-#   fi
 
 if test "$MPINC" = nope; then
    dirs="$srcdir/gmp-2.0.2 /usr/unsupported/include /usr/local/include \
@@ -251,7 +211,7 @@ AC_SUBST(MPINC)
 SAVEINCS="$INCS"
 INCS="$INCS $XINCLUDES"
 AC_EGREP_CPP("gmp=.*2", [
-  #include <gmp.h> 
+  #include <gmp.h>
   gmp=__GNU_MP__
   ],AC_DEFINE(HAVE_GMP2_H))
 INCS="$SAVEINCS"
@@ -265,7 +225,7 @@ if test "$MPLIB" = nope; then
   fi
   if test "$MPLIB" = nope; then
     dirs="$srcdir/gmp-2.0.2 /usr/unsupported/lib /usr/local/lib /usr/gnu/lib \
-      /usr/local/gnu/lib /usr/lib/gnu /usr/local/lib/gmp-2.0.2" 
+      /usr/local/gnu/lib /usr/lib/gnu /usr/local/lib/gmp-2.0.2"
     for i in $dirs; do
       if test -r $i/libmp.a; then
     	MPLIB="-L$i -lmp"
@@ -292,14 +252,10 @@ if test "$MPLIB" = nope; then
 fi
 AC_SUBST(MPLIB)
 
-if test -r "$srcdir/mkkey.c"; then
-    echo "	RSA utilities for COW build found."
-else
+if ! test -r "$srcdir/mkkey.c"; then
     echo
-    echo Warning RSA utilities for COW build not found, turning RSA off.
+    echo Warning RSA utilities for COW build not found in source, turning RSA off.
     NORSA="#"
-    echo Check your favorite FTP site for a blessed client.
-    echo If you cannot find one contact the team.
     echo
 fi
 
@@ -314,8 +270,6 @@ AC_SUBST(NORSA)
 #--------------------------------------------------------------------
 
 AC_CHECK_LIB(Xbsd, main, [LIBS="$LIBS -lXbsd"])
-# AC _CHECK_LIB(V3, main, [LIBS="$LIBS -lV3"])
-# AC _CHECK_LIB(PW, main, [LIBS="$LIBS -lPW"])
 AC_CHECK_LIB(socket, main, [LIBS="$LIBS -lsocket"])
 AC_CHECK_LIB(inet, main, [LIBS="$LIBS -linet"])
 AC_CHECK_LIB(nsl, main, [LIBS="$LIBS -lnsl"])
@@ -327,49 +281,10 @@ AC_CHECK_LIB(sun, main, [LIBS="$LIBS -lsun"])
 #--------------------------------------------------------------------
 
 AC_TYPE_SIGNAL
-AC_SYS_RESTARTABLE_SYSCALLS
-AC_CACHE_CHECK(for signals style,cow_cv_signals_type,
-AC_TRY_RUN([
-#include <signal.h>
-#include <sys/time.h>
-test(){ }
-int main(){
-int c;
-static struct itimerval udt;
-signal(SIGALRM,test);
-udt.it_interval.tv_sec = 1;
-udt.it_interval.tv_usec = 10;
-udt.it_value.tv_sec = 1;
-udt.it_value.tv_usec = 10;
-(void) setitimer(ITIMER_REAL, &udt, (struct itimerval *) 0);
-for (c=0; c<5; c++)
-pause();
-exit(0);}
-], cow_cv_signals_type=BSD,
-   cow_cv_signals_type=SYSV_or_POSIX,
-   cow_cv_signals_type=POSIX
-))
-
-if test "x$cow_cv_signals_type" = xBSD; then
-	AC_DEFINE(BSD_SIGNALS)
-else
-	if test "x$cow_cv_signals_type" = xSYSV_or_POSIX; then
-		AC_CHECK_FUNC(sigset, AC_DEFINE(SYSV_SIGNALS),
-				      AC_DEFINE(POSIX_SIGNALS))
-	else
-		AC_DEFINE(POSIX_SIGNALS)
-	fi
-fi
-
-# AC_CHECK_LIB(BSD, main, [LIBS="$LIBS -lBSD"])
-# AC_CHECK_LIB(bsd, main, [LIBS="$LIBS -lbsd"])
-
 AC_CHECK_FUNCS(usleep random setstate strftime ftime)
-
 AC_CHECK_LIB(m, main, [LIBS="$LIBS -lm"])
 AC_CHECK_FUNCS(nint)
 AC_EGREP_HEADER(rint, math.h, , AC_DEFINE(NEED_RINT_DEC))
-
 AC_REPLACE_FUNCS(usleep setstate strdup rint)
 
 #--------------------------------------------------------------------
@@ -393,4 +308,8 @@ if test x$no_sdl != xyes; then
 fi
 
 AM_GNU_GETTEXT([external])
+
+#--------------------------------------------------------------------
+#       Emit output
+#--------------------------------------------------------------------
 AC_OUTPUT(system.mk key.mk po/Makefile.in)
