--- a/cow.desktop
+++ b/cow.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Encoding=UTF-8
-Name=COW (Netrek Client)
-Comment=COW Netrek Client
-Exec=cow
+Name=Netrek Client (COW)
+Comment=Conquer space with Netrek
+Exec=netrek-client-cow
 Terminal=false
 Type=Application
 Icon=cow
+Categories=Game;StrategyGame;
