Add check for Imlib2

--- a/configure.in
+++ b/configure.in
@@ -177,6 +177,12 @@ AC_REPLACE_FUNCS(usleep setstate strdup rint)
 #--------------------------------------------------------------------
 
 #--------------------------------------------------------------------
+#       Check for Imlib
+#--------------------------------------------------------------------
+AC_SEARCH_LIBS([imlib_load_image], [Imlib2], [],
+               [AC_MSG_ERROR([Could not find Imlib2])])
+
+#--------------------------------------------------------------------
 #       Check for SDL
 #--------------------------------------------------------------------
 
