fix warnings, use configure.ac, remove gettext
- fix many compiler warnings,

- rename configure.in to configure.ac as it is input to autoconf,

- remove gettext; there were never any translations contributed, and
  only client command line messages were included.

--- a/configure.ac
+++ b/configure.ac
@@ -198,9 +198,7 @@ if test x$no_sdl != xyes; then
   fi
 fi
 
-AM_GNU_GETTEXT([external])
-
 #--------------------------------------------------------------------
 #       Emit output
 #--------------------------------------------------------------------
-AC_OUTPUT(system.mk po/Makefile.in)
+AC_OUTPUT(system.mk)
