Remove obsolete XTREKRC.example
Use netrekrc.example instead.

Disable host configuration, as the host is no longer available, and it
is unlikely someone will want to use a default host anyway now that we
have a metaserver.

Fixes https://github.com/quozl/netrek-client-cow/issues/6

--- a/netrekrc.example
+++ b/netrekrc.example
@@ -43,10 +43,10 @@ name:			guest
 #password:		oggtpau
 
 ###############################################################################
-# this sets the default server and port
+# this sets the default server and port and bypasses metaserver window
 
-server:			se.netrek.org
-port:			2592
+#server:			se.netrek.org
+#port:			2592
 
 # you can also make nicknames like:
 server.bronco:		bronco.ece.cmu.edu
