--- a/system.mk.in
+++ b/system.mk.in
@@ -63,7 +63,7 @@ ROBJ 		= check.o colors.o data.o death.o defaults.o dmessage.o \
 	          warning.o udpopt.o ping.o pingstats.o rotate.o lagmeter.o \
                   parsemeta.o netstat.o netstatopt.o spopt.o dashboard.o \
                   dashboard3.o short.o distress.o senddist.o defwin.o tools.o \
-                  sound.o docwin.o cflags.o beeplite.o feature.o string_util.o \
+                  sound.o docwin.o beeplite.o feature.o string_util.o \
                   local.o censor.o cowmain.o camera.o myf.o
 
 RSRC 		= check.c colors.c data.c death.c defaults.c dmessage.c \
@@ -74,7 +74,7 @@ RSRC 		= check.c colors.c data.c death.c defaults.c dmessage.c \
                   war.c warning.c udpopt.c sintab.c ping.c pingstats.c \
                   rotate.c lagmeter.c netstat.c netstatopt.c spopt.c \
                   dashboard.c dashboard3.c short.c distress.c senddist.c \
-                  defwin.c tools.c sound.c docwin.c cflags.c beeplite.c \
+                  defwin.c tools.c sound.c docwin.c beeplite.c \
                   feature.c reserved.c string_util.c local.c censor.c \
                   cowmain.c camera.c myf.c
 
@@ -107,7 +107,7 @@ CFLAGS += $(INCDIRS)
 LDFLAGS ?= -g
 LIBRARIES = $(LIBS) $(EXTRALIBS) $(SDL_LIBS) $(SDL_MIXER_LIBS) $(XXF86VM_LIBS)
 
-netrek-client-cow: $(PMAKE) null $(ROBJ) $(MAINOBJ) $(INPUTOBJ) $(X11OBJ) $(WIN32OBJ) $(RANDOMOBJ) cflags.c
+netrek-client-cow: $(PMAKE) null $(ROBJ) $(MAINOBJ) $(INPUTOBJ) $(X11OBJ) $(WIN32OBJ) $(RANDOMOBJ)
 	$(CC) $(LDFLAGS) -o netrek-client-cow $(ROBJ) $(INPUTOBJ) $(MAINOBJ) $(X11OBJ) $(WIN32OBJ) $(RANDOMOBJ) $(LIBRARIES)
 
 netrek.shared: done.libcow $(MAINOBJ) $(COWAPI)
@@ -129,27 +129,20 @@ random.o: random.c
 strdup.o: strdup.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c strdup.c
 
-cflags.c: mkcflags
-	./mkcflags "$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS)" "$(ARCH)"  > cflags.c
-	echo char cwho[]=$(CWHO)\; >> cflags.c
-
-mkcflags: mkcflags.c system.mk null patchlevel.h version.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -o mkcflags mkcflags.c $(LIBRARIES)
-
 tags: $(RSRC)
 	ctags $(RSRC) $(INCLUDES)
 
-depend: cflags.c null
+depend: null
 	-makedepend -f system.mk $(RSRC) $(MAINSRC) \
 	$(X11SRC) name.c $(INCDIRS)
 
-proto: cflags.c null
+proto: null
 	$(PROTOIZE) $(RSRC) $(MAINSRC) $(X11SRC) $(WIN32SRC)
 
-unproto: cflags.c null
+unproto: null
 	$(UNPROTOIZE) $(RSRC) $(MAINSRC) $(X11SRC) $(WIN32SRC)
 
-indent: cflags.c null
+indent: null
 	$(INDENT) $(RSRC) $(MAINSRC) $(INCLUDES) $(X11SRC) $(WIN32SRC)
 
 to_unix: $(RSRC) $(INCLUDES) $(MAINSRC) $(X11SRC)
