--- a/system.mk.in
+++ b/system.mk.in
@@ -55,28 +55,27 @@ RANDOMOBJ       = @LIBOBJS@
 #  No editables below this point.
 ###############################################################################
 
-ROBJ 		= check.o colors.o data.o death.o defaults.o dmessage.o \
-                  enter.o findslot.o getname.o getship.o helpwin.o inform.o \
-                  interface.o newwin.o option.o planetlist.o macrowin.o \
-	          map.o playerlist.o ranklist.o reserved.o sintab.o \
-	          smessage.o socket.o playback.o stats.o util.o war.o \
-	          warning.o udpopt.o ping.o pingstats.o rotate.o lagmeter.o \
-                  parsemeta.o netstat.o netstatopt.o spopt.o dashboard.o \
-                  dashboard3.o short.o distress.o senddist.o defwin.o tools.o \
-                  sound.o docwin.o beeplite.o feature.o string_util.o \
-                  local.o censor.o cowmain.o camera.o myf.o
+ROBJ = \
+    beeplite.o camera.o censor.o check.o colors.o cowmain.o \
+    dashboard.o dashboard3.o data.o death.o defaults.o defwin.o \
+    distress.o dmessage.o docwin.o enter.o feature.o findslot.o \
+    getname.o getship.o helpwin.o inform.o interface.o \
+    lagmeter.o local.o macrowin.o map.o myf.o netstat.o netstatopt.o \
+    newwin.o option.o parsemeta.o ping.o pingstats.o planetlist.o \
+    playback.o playerlist.o ranklist.o reserved.o rotate.o senddist.o \
+    short.o sintab.o smessage.o socket.o sound.o spopt.o stats.o \
+    string_util.o tools.o udpopt.o util.o war.o warning.o
 
-RSRC 		= check.c colors.c data.c death.c defaults.c dmessage.c \
-                  enter.c findslot.c getname.c getship.c helpwin.c inform.c \
-	          input.c interface.c newwin.c option.c planetlist.c \
-                  macrowin.c map.c playerlist.c ranklist.c redraw.c \
-                  smessage.c parsemeta.c socket.c playback.c stats.c util.c \
-                  war.c warning.c udpopt.c sintab.c ping.c pingstats.c \
-                  rotate.c lagmeter.c netstat.c netstatopt.c spopt.c \
-                  dashboard.c dashboard3.c short.c distress.c senddist.c \
-                  defwin.c tools.c sound.c docwin.c beeplite.c \
-                  feature.c reserved.c string_util.c local.c censor.c \
-                  cowmain.c camera.c myf.c
+RSRC = \
+    beeplite.c camera.c censor.c check.c colors.c cowmain.c \
+    dashboard.c dashboard3.c data.c death.c defaults.c defwin.c \
+    distress.c dmessage.c docwin.c enter.c feature.c findslot.c \
+    getname.c getship.c helpwin.c inform.c input.c interface.c \
+    lagmeter.c local.c macrowin.c map.c myf.c netstat.c netstatopt.c \
+    newwin.c option.c parsemeta.c ping.c pingstats.c planetlist.c \
+    playback.c playerlist.c ranklist.c redraw.c reserved.c rotate.c \
+    senddist.c short.c sintab.c smessage.c socket.c sound.c spopt.c \
+    stats.c string_util.c tools.c udpopt.c util.c war.c warning.c
 
 INCLUDES 	= struct.h packets.h defs.h copyright.h bitmaps.h data.h \
 	          oldbitmaps.h tngbitmaps.h hullbitmaps.h rabbitbitmaps.h \
